--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <source media="(min-width: 960px)" srcset="images/museum-960_X_960.jpg 960w,
                                                 images/museum-1280_X_1280.jpg 1280w,
                                                 images/museum-1600_X_1600.jpg 1600w">
-    <!-- 備用圖像 -->
+    <!-- Default image-->
     <img src="images/museum-320_X240.jpg" alt="Museum Image" class="responsive-image">
   </picture>
 
