--- a/index.html
+++ b/index.html
@@ -15,27 +15,20 @@
       <h1>Picture This!</h1>
       <h4>My Really Cool Blog Post</h4>
     </div>
-
-   <!-- Picture element for responsive images -->
-   <picture>
-    <!-- Lanscape images for smaller than 960px -->
-    <source media="(max-width: 959px)" srcset=
-    "images/museum-320_X_240.jpg 320w,
-    images/museum-480_X_360.jpg 480w,
-    images/museum-720_X_540.jpg 720w,
-    image/museum-960_x_720.jpg 960w">
-
-    <!-- Square images for larger than or equal to 960px -->
-    <source media="(min-width: 960px)" srcset="
-    images/museum-square-960_X960.jpg 960w,
-    images/museum-square-1280_X1280.jpg 1280w,
-    images/museum-square-1600_X1600.jpg 1600w">
-  
-  <!-- Default image fallback -->
-  <img src="images/museum-320_X240.jpg" alt="Museum Image" class="responsive-image">
-</picture>
-
     
+    <picture>
+      <!-- Source for smaller viewports -->
+      <source media="(max-width: 959px)" srcset="images/museum-320_X_240.jpg 320w,
+                                                    images/museum-480_X_360.jpg 480w,
+                                                    images/museum-720_X_540.jpg 720w,
+                                                    images/museum-960_x_720.jpg 960w">
+      <!-- Source for larger viewports -->
+      <source media="(min-width: 960px)" srcset="images/museum-960_X_960.jpg 960w,
+                                                  images/museum-1280_X_1280.jpg 1280w,
+                                                  images/museum-1600_X_1600.jpg 1600w">
+      <!-- Default image -->
+      <img src="images/museum-320_X_240.jpg" alt="Museum Image" class="responsive-image">
+    </picture>
 
   </header>
 </body>
